Optimized code and update