@@ -7,28 +7,35 @@ import org.bukkit.inventory.Inventory;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.ItemMeta;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class BuildingPlanManager {
 
+    private static final int GUI_SIZE = 54;
+    private static final String GUI_TITLE = "Building Plan";
     private final Inventory gui;
 
     public BuildingPlanManager() {
-        gui = Bukkit.createInventory(null, 54, "Building Plan");
+        gui = Bukkit.createInventory(null, GUI_SIZE, GUI_TITLE);
         initializeGUI();
     }
 
     private void initializeGUI() {
-        List<GUIItem> items = Arrays.asList(
-                new GUIItem(4, Material.GLASS_PANE, "Floor"),
-                new GUIItem(20, Material.GLASS_PANE, "Walls"),
-                new GUIItem(40, Material.GLASS_PANE, "Foundation"),
-                new GUIItem(24, Material.GLASS_PANE, "DoorWave")
+        List<ItemData> items = List.of(
+                new ItemData(4, Material.GLASS_PANE, "Floor"),
+                new ItemData(20, Material.GLASS_PANE, "Walls"),
+                new ItemData(40, Material.GLASS_PANE, "Foundation"),
+                new ItemData(24, Material.GLASS_PANE, "DoorWave")
         );
 
-        for (GUIItem item : items) {
-            addGUIItem(item.slot, item.material, item.name);
+        for (ItemData item : items) {
+            ItemStack itemStack = new ItemStack(item.material);
+            ItemMeta meta = itemStack.getItemMeta();
+            if (meta != null) {
+                meta.setDisplayName(item.name);
+                itemStack.setItemMeta(meta);
+            }
+            gui.setItem(item.slot, itemStack);
         }
     }
 
@@ -36,28 +43,12 @@ public class BuildingPlanManager {
         player.openInventory(gui);
     }
 
-    private void addGUIItem(int slot, Material material, String name) {
-        ItemStack item = new ItemStack(material);
-        ItemMeta meta = item.getItemMeta();
-
-        if (meta != null) {
-            meta.setDisplayName(name);
-            item.setItemMeta(meta);
-        }
-
-        gui.setItem(slot, item);
-    }
-
-    public Inventory getGUI() {
-        return gui;
-    }
-
-    private static class GUIItem {
+    private static class ItemData {
         int slot;
         Material material;
         String name;
 
-        GUIItem(int slot, Material material, String name) {
+        ItemData(int slot, Material material, String name) {
             this.slot = slot;
             this.material = material;
             this.name = name;
